# crm

./: .env.example  .gitignore  DEPLOY_PRODUCTION.md  PRODUCT_ROADMAP.md  README.md  USDT_DEPOSIT_ADDRESS_DESIGN.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260426_0001_initial_schema.py  20260426_0002_system_settings.py  20260426_0003_refresh_tokens.py  20260426_0004_audit_logs.py  20260426_0005_webhook_events.py  20260426_0006_user_lockout.py  20260426_0007_ticket_assignment_priority.py  20260427_0008_invoice_workflow.py  20260427_0009_staff_fields.py  20260427_0010_customer_usdt_addresses.py  20260427_0011_transaction_ledger_fields.py  20260427_0012_payment_reconciliations.py  20260430_0013_ad_spend_and_payment_control.py  20260504_0014_treasury_and_wallet_ops.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  ad_account.py  all_models.py  audit_log.py  bank_treasury_snapshot.py  base.py  customer.py  (+11 more)
backend/tests/: conftest.py  test_auth_service.py  test_customer_validation.py  test_health_and_settings.py  test_invoice_workflow.py  test_lark_actions.py  test_payment_control.py  test_permissions.py  test_reconciliation_records.py  test_referral_commissions.py  test_sepay_payload_parsing.py  test_ticket_workflow.py  test_transaction_rules.py  test_treasury_and_wallet_ops.py  test_usdt_deposit_addresses.py  test_webhook_idempotency.py
(+102 files in other folders)
