[project]
name = "agency-crm-backend"
version = "0.1.0"
description = "FastAPI backend for the agency CRM"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "aiosqlite==0.20.0",
  "alembic==1.13.3",
  "pydantic[email]==2.9.2",
  "pydantic-settings==2.5.2",
  "python-jose[cryptography]==3.3.0",
  "passlib==1.7.4",
  "python-multipart==0.0.12",
  "apscheduler==3.10.4",
  "redis==5.1.1",
  "httpx==0.27.2",
  "facebook-business==19.0.3",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
